my-deployment-eval.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: my-app
  template:
    metadata:
      labels:
        app: my-app
    spec:
      containers:
        - name: mysql-container
          image: datascientest/mysql-k8s:1.0.0
          ports:
            - containerPort: 3306
        - name: fastapi-container
          image: fastapi:v1
          ports:
            - containerPort: 8000
      network: my-network
