my-service-eval.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-fastapi-service
spec:
  selector:
    app: mysql-fastapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
